# internal/app/api/router.go
@@ -38,6 +38,7 @@ func (s Server) initRoutes(app *fiber.App, handler *handler.Handler, cfg *config
 			missions.Post("/", basicAuth, timeout.NewWithContext(handler.CreateMission, cfg.Server.WriteTimeout))
 			missions.Get("/", basicAuth, timeout.NewWithContext(handler.GetMissions, cfg.Server.ReadTimeout))
 			missions.Get("/:id", basicAuth, timeout.NewWithContext(handler.GetMission, cfg.Server.ReadTimeout))
+			missions.Patch("/:mission_id/cats/:cat_id", basicAuth, timeout.NewWithContext(handler.AssignMissionToCat, cfg.Server.WriteTimeout))
 		}
 
 	}
